[gd_scene load_steps=3 format=3 uid="uid://d00e3686bvusi"]

[ext_resource type="Script" uid="uid://blbgs3nifjmni" path="res://demo.gd" id="1_0bhed"]
[ext_resource type="Script" uid="uid://dpjolkrkavv5n" path="res://addons/gds_tableview4/tableview.gd" id="2_m0rpm"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_0bhed")

[node name="Label" type="Label" parent="."]
offset_left = 75.0
offset_top = 18.0
offset_right = 299.0
offset_bottom = 41.0
text = "A TableView"

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 74.0
offset_top = 53.0
offset_right = 298.0
offset_bottom = 454.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Item"

[node name="Add10Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add 10"

[node name="ClearButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="ATableView" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_m0rpm")
metadata/_custom_type_script = ExtResource("2_m0rpm")

[node name="PanelContainer2" type="PanelContainer" parent="."]
offset_left = 672.0
offset_top = 56.0
offset_right = 896.0
offset_bottom = 457.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddButton" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Item"

[node name="Add10Button" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add 10"

[node name="ClearButton" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="BTableView" type="ScrollContainer" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_m0rpm")
metadata/_custom_type_script = ExtResource("2_m0rpm")

[node name="Label2" type="Label" parent="."]
offset_left = 674.0
offset_top = 20.0
offset_right = 898.0
offset_bottom = 43.0
text = "B TableView"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="add_for_a"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Add10Button" to="." method="add_10_for_a"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ClearButton" to="." method="clear_a"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="add_for_b"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer/Add10Button" to="." method="add_10_for_b"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer/ClearButton" to="." method="clear_b"]
